--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.9.0",
+    "@coral-xyz/anchor": "^0.31.1",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
+    "@solana/wallet-adapter-react": "^0.15.38",
+    "@solana/wallet-adapter-react-ui": "^0.9.38",
+    "@solana/wallet-adapter-wallets": "^0.19.36",
+    "@solana/web3.js": "^1.98.2",
     "framer-motion": "^12.8.0",
+    "ipfs-core": "^0.18.1",
     "next": "15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
