--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
+    "@coral-xyz/anchor": "^0.30.1",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/web3.js": "^1.95.3",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.8.0",
     "ipfs-core": "^0.18.1",
     "next": "15.3.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -33,6 +35,9 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "ethers": "^5.8.0",
+    "hardhat": "^2.24.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
