--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.7.0",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.95.3",
     "dotenv": "^16.5.0",
-    "framer-motion": "^12.8.0",
+    "framer-motion": "^12.11.0",
     "ipfs-core": "^0.18.1",
+    "lucide-react": "^0.510.0",
     "next": "15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.15.3"
+    "react-simple-maps": "^3.0.0",
+    "recharts": "^2.15.3",
+    "victory": "^37.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -39,6 +42,7 @@
     "hardhat": "^2.24.0",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
