--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@heroicons/react": "^2.2.0",
+    "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^6.7.0",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.95.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.11.0",
     "ipfs-core": "^0.18.1",
@@ -25,12 +27,14 @@
     "react-dom": "^18.2.0",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.3",
+    "ua-parser-js": "^2.0.3",
     "victory": "^37.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@tailwindcss/postcss": "^4",
+    "@types/date-fns": "^2.5.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
