--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sillylink",
+  "name": "decentlink",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,10 +13,13 @@
     "@heroicons/react": "^2.2.0",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^6.7.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.95.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.11.0",
@@ -27,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.3",
+    "tailwind-merge": "^3.3.0",
     "ua-parser-js": "^2.0.3",
     "victory": "^37.3.6"
   },
@@ -48,6 +52,7 @@
     "postcss": "^8.5.3",
     "prisma": "^6.7.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
